--- a/src/Acme.BookStore.Domain.Shared/Localization/BookStore/en.json
+++ b/src/Acme.BookStore.Domain.Shared/Localization/BookStore/en.json
@@ -15,11 +15,26 @@
     "Name": "Name",
     "Type": "Type",
     "Price": "Price",
+    "Menu:Authors": "Authors",
+    "Authors": "Authors",
+    "AuthorDeletionConfirmationMessage": "Are you sure to delete the author '{0}'?",
+    "BirthDate": "Birth date",
+    "NewAuthor": "New author",
     "CreationTime": "Creation time",
     "AreYouSure": "Are you sure?",
     "BookDeletionConfirmationMessage": "Are you sure to delete the book '{0}'?",
     "SuccessfullyDeleted": "Successfully deleted!",
     "AreYouSureToDelete": "Are you sure you want to delete this item?",
+    "BookStore:00001": "There is already an author with the same name: {name}",
+    "Permission:BookStore": "Book Store",
+    "Permission:Books": "Book Management",
+    "Permission:Books.Create": "Creating new books",
+    "Permission:Books.Edit": "Editing the books",
+    "Permission:Books.Delete": "Deleting the books",
+    "Permission:Authors": "Author Management",
+    "Permission:Authors.Create": "Creating new authors",
+    "Permission:Authors.Edit": "Editing the authors",
+    "Permission:Authors.Delete": "Deleting the authors",
     "Enum:BookType.0": "Undefined",
     "Enum:BookType.1": "Adventure",
     "Enum:BookType.2": "Biography",
